[package]
name = "merkleproof"
version = "0.1.0"
edition = "2021"
authors = ["Sourav Mishra <sourav.m.bt@gmail.com>"]
description = "A robust implementation of Merkle trees for data verification in distributed systems"
license = "MIT"
repository = "https://github.com/0xsouravm/merkle-tree-rs"
keywords = ["merkle", "tree", "blockchain", "verification", "cryptography"]
categories = ["cryptography", "data-structures", "algorithms"]
readme = "README.md"

[dependencies]
sha2 = "0.10.7"
hex = "0.4.3"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "file"
path = "examples/file.rs"